@@ -14,8 +14,8 @@
 >
   <tr width="100%"> 
     <td valign="TOP"><strong><font size="+2">Mac OS Plugin</font></strong></td>
-    <td valign="TOP" align="RIGHT"><font size="-1"> <strong>Version 2.0.4 (Feb. 
-      23, 2003)</strong> <br>
+    <td valign="TOP" align="RIGHT"><font size="-1"> <strong>Version 3.0 (Nov. 
+      16, 2003)</strong> <br>
       By Kris Kopicki &lt;krisko@users.sourceforge.net&gt; </font></td>
   </tr>
 </table>
@@ -45,9 +45,7 @@
 </ul>
 <h3>Known Issues:</h3>
 <ul>
-  <li>Files opened in the Finder before jEdit is running are not opened in jEdit 
-    (10.0.x - 10.1.x).</li>
-  <li>Scripts that require user interaction are not supported.</li>
+  <li>You will probably experience problems using anything less than Java 1.4</li>
 </ul>
 <p>&nbsp;</p>
 </body>
