@@ -4,9 +4,9 @@
 
 	<property name="jedit.install.dir"  value="../.."/>
 	<property name="jar.name"  value="MacOS.jar"/>
-
+	
 	<property name="install.dir"  value=".."/>
-
+	<property name="build.dir"  value="build"/>
 
 	<path id="project.class.path">
 		<pathelement location="${jedit.install.dir}/jedit.jar"/>
@@ -14,32 +14,36 @@
 		<pathelement location="."/>
 	</path>
 
-
+	
 	<target name="compile">
+		<mkdir dir="${build.dir}"/>
 		<javac
 			srcdir="."
 			deprecation="on"
+			destdir="${build.dir}"
 			includeJavaRuntime="yes"
 		>
 			<classpath refid="project.class.path"/>
 		</javac>
 	</target>
 
-
+	
 	<target name="dist" depends="compile">
 		<mkdir dir="${install.dir}"/>
 		<jar jarfile="${install.dir}/${jar.name}">
-			<fileset dir=".">
+			<fileset dir="build">
 				<include name="**/*.class"/>
+			</fileset>
+			<fileset dir=".">
 				<include name="**/*.props"/>
 				<include name="**/*.html"/>
 			</fileset>
 		</jar>
 	</target>
 	
+	
 	<target name="clean">
-		<delete>
-			<fileset dir="." includes="**/*.class"/>
+		<delete dir="build">
 		</delete>
 	</target>
 </project>
